--- a/config-save/chocoinstall-packages.config
+++ b/config-save/chocoinstall-packages.config
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="anaconda3" />
   <package id="autohotkey" />
   <package id="autohotkey.install" />
   <package id="autohotkey.portable" />
@@ -45,6 +46,7 @@
   <package id="NTop.Portable" />
   <package id="obsidian" />
   <package id="OpenOffice" />
+  <package id="openshot" />
   <package id="openssl" />
   <package id="openvpn-connect" />
   <package id="packer" />
